--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="script.js"></script>
     <script>
         function GoToGame()  {
-              window.location.href = 'ditch.html'
+              window.location.href = 'InGame/ditch.html'
         }
     </script>
 </body>
