--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <button id="settings-btn">설정</button>
     </div>
     
-    <audio id="bgm" autoplay loop>
+    <audio id="bgm" autoplay loop muted>
         <source src="Assets/sfx/bgm/openingᅳ ost (1).m4a" type="audio/mpeg">
         브라우저가 오디오 태그를 지원하지 않습니다.
     </audio>
+
 
     <script src="script.js"></script>
     <script>
