--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button id="start-btn" onclick='GoToGame()'>시작하기</button>
         <button id="settings-btn">설정</button>
     </div>
+
+    <div id="startScreen">
+        <p id="startText">화면을 클릭하거나 아무 키나 눌러 시작</p>
+    </div>
     
     <audio id="bgm" autoplay loop muted>
         <source src="Assets/sfx/bgm/openingᅳ ost (1).m4a" type="audio/mpeg">
