--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <button id="settings-btn">설정</button>
     </div>
 
+    <!-- 오프닝 화면 -->
+    <div id="openingScreen">
+        <p id="creatorText">snowii presents...</p>
+        <p id="gameTitle">eid : The Dream Defect</p>
+        <p id="introText"></p>
+    </div>
+
     <div id="startScreen">
         <p id="startText">화면을 클릭하거나 아무 키나 눌러 시작</p>
     </div>
