--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p id="creatorText">snowii presents...</p>
         <p id="gameTitle">eid : The Dream Defect</p>
         <p id="introText"></p>
+        <p id="startPrompt">아무 키를 누르거나 화면을 터치해 시작</p>
     </div>
     
     <audio id="bgm" autoplay loop muted>
