--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <p id="startPrompt">아무 키를 누르거나 화면을 터치해 시작</p>
     </div>
     
-    <audio id="bgm" autoplay loop muted>
+    <audio id="bgm" preload="auto" loop>
         <source src="Assets/sfx/bgm/openingᅳ ost (1).m4a" type="audio/mpeg">
-        브라우저가 오디오 태그를 지원하지 않습니다.
     </audio>
+
 
 
     <script src="script.js"></script>
