--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
     <!-- 오프닝 화면 -->
     <div id="openingScreen">
-        <p id="creatorText">snowii presents...</p>
+        <p id="creatorText">AQUfluc_ studio..</p>
         <p id="gameTitle">eid : The Dream Defect</p>
         <p id="introText"></p>
+        <p id="startPrompt">최적화된 환경을 위하여 PC를 이용해 주세요</p>
         <p id="startPrompt">아무 키를 누르거나 화면을 터치해 시작</p>
     </div>
     
