--- a/InGame/ditch.html
+++ b/InGame/ditch.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이드 : 디치 결함</title>
+    <title>eid : The Dream Defect</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <script src="game.js"></script>
+
+    <canvas id="gameCanvas"></canvas> <!-- 게임 화면 -->
+    
+    <script src="game.js"></script> <!-- 게임 스크립트 -->
 </body>
 </html>
