--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="script.js"></script>
     <script>
         function GoToGame()  {
+            enterFullScreen(); // 전체 화면 모드 활성화
             window.location.href = 'InGame/ditch.html'
         }
 
