--- a/InGame/ditch.html
+++ b/InGame/ditch.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eid : The Dream Defect</title>
     <link rel="stylesheet" href="style.css">
+    <!-- 종료 확인 창 -->
+    <div id="exitPrompt" style="
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(0, 0, 0, 0.8);
+        padding: 20px;
+        color: white;
+        text-align: center;
+        border-radius: 10px;
+        font-size: 18px;
+    ">
+        <p>게임을 종료하시겠습니까?</p>
+        <p>(Enter: 예 / ESC: 아니오)</p>
+    </div>
 </head>
 <body>
 
