--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="script.js"></script>
     <script>
         function GoToGame()  {
+            sessionStorage.setItem("fullscreen", "true"); // 전체화면 실행 여부 저장
             window.location.href = 'InGame/ditch.html'
         }
 
