--- a/InGame/ditch.html
+++ b/InGame/ditch.html
@@ -22,6 +22,24 @@
         <p>게임을 종료하시겠습니까?</p>
         <p>(Enter: 예 / ESC: 아니오)</p>
     </div>
+    <!-- 전체 화면 요청 메시지 -->
+    <div id="fullscreenPrompt" style="
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(0, 0, 0, 0.9);
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+    ">
+        <p>전체 화면이 해제되었습니다.</p>
+        <p>다시 전체 화면으로 전환하려면 클릭하거나 아무 키나 누르세요.</p>
+    </div>
+
 </head>
 <body>
 
